# torc

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  mpc_app_tests.cpp  mpc_quad_test.cpp  sample_app_tests.cpp  xml_tests.cpp
.github/workflows/: cmake-multi-platform.yml  ubuntu.yml
auto_diff/: CMakeLists.txt  cpp_ad_interface.cpp
auto_diff/include/: auto_diff_types.h  cpp_ad_interface.h  vector_autodiff_fn.h
constraints/: CMakeLists.txt  Makefile  cmake_install.cmake
constraints/include/: constraint.h  constraint_data.h
controllers/: CMakeLists.txt  whole_body_qp_controller.cpp
controllers/include/: whole_body_qp_controller.h
costs/: CMakeLists.txt  Makefile  base_cost.h  cmake_install.cmake  linear_cost.cpp  linear_cost.h
costs/include/: analytic_cost.h  autodiff_cost.h  base_cost.h  explicit_diff_cost.h  finite_diff_cost.h  linear_cost.h  quadratic_cost.h
examples/: CMakeLists.txt  casadi_test.cpp  mpc_app_tests.cpp  mpc_g1_app_test.cpp  mpc_hpipm_example.cpp  mpc_mujoco.cpp  mpc_quad_test.cpp  parallel_mpc_example.cpp  wbc_example.cpp
functions/: CMakeLists.txt
functions/include/: analytic_fn.h  autodiff_fn.h  base_fn.h  explicit_fn.h  finite_diff_fn.h  linear_fn.h  quadratic_fn.h
models/: CMakeLists.txt  Makefile  base_model.cpp  centroidal_model.cpp  cmake_install.cmake  contact_state.cpp  full_order_rigid_body.cpp  pinocchio_model.cpp  rigid_body.cpp  robot_state.cpp  single_rigid_body.cpp
models/include/: ExternalForce.h  base_model.h  centroidal_model.h  contact_model.h  contact_state.h  frame_state_types.h  full_order_rigid_body.h  pinocchio_interface.h  pinocchio_model.h  rigid_body.h  robot_contact_info.h  robot_state.h  robot_state_types.h  single_rigid_body.h
mpc/: BoxConstraint.cpp  CMakeLists.txt  CentroidalDynamicsConstraint.cpp  CollisionConstraint.cpp  ConfigTrackingCost.cpp  Cost.cpp  DynamicsConstraint.cpp  ForwardKinematicsCost.cpp  FrictionConeConstraint.cpp  HolonomicConstraint.cpp  InputConstraint.cpp  LinearLsCost.cpp  MpcSettings.cpp  NonlinearLsCost.cpp  PolytopeConstraint.cpp  SRBConstraint.cpp  StateConstraint.cpp  StateInputConstraint.cpp  SwingConstraint.cpp  configuration_tracking_cost.cpp  constraint.cpp  contact_schedule.cpp  cost_function.cpp  full_order_mpc.cpp  hpipm_mpc.cpp  mpc_base.cpp  mpc_contact.cpp  reference_generator.cpp  simple_trajectory.cpp  trajectory.cpp
mpc/include/: BoxConstraint.h  CentroidalDynamicsConstraint.h  CollisionConstraint.h  CollisionData.h  ConfigTrackingCost.h  Cost.h  DynamicsConstraint.h  ForwardKinematicsCost.h  FrictionConeConstraint.h  HolonomicConstraint.h  InputConstraint.h  LinearLsCost.h  MpcSettings.h  NonlinearLsCost.h  PolytopeConstraint.h  SRBConstraint.h  StateConstraint.h  StateInputConstraint.h  SwingConstraint.h  configuration_tracking_cost.h  constraint.h  contact_schedule.h  cost_function.h  full_order_mpc.h  hpipm_mpc.h  mpc_base.h  mpc_contact.h  reference_generator.h  simple_trajectory.h  trajectory.h
sample_planner/: CMakeLists.txt  cross_entropy.cpp  simulation_dispatcher.cpp
sample_planner/include/: cross_entropy.h  simulation_dispatcher.h
solver_interfaces/: CMakeLists.txt  clarabel_interface.cpp  hpipm.cpp  ipopt.cpp  ipopt_interface.cpp  osqp_interface.cpp  qp_interface.cpp  solver_status.cpp
solver_interfaces/include/: clarabel_interface.h  hpipm.h  ipopt.h  ipopt_interface.h  osqp_interface.h  qp_interface.h  solver_status.h
state_estimation/: CMakeLists.txt  low_pass_filter.cpp
state_estimation/include/: low_pass_filter.h
step_planning/: CMakeLists.txt  step_planner.cpp
step_planning/include/: step_planner.h
tests/: CMakeLists.txt  LowPassFilterTests.cpp  ad_interface_tests.cpp  centroidal_tests.cpp  clarabel_tests.cpp  constraint_tests.cpp  controller_tests.cpp  cost_test_class.h  cost_tests.cpp  dynamics_tests.cpp  frame_transform_tests.cpp  full_order_test_fcns.h  function_tests.cpp  hpipm_mpc_test.cpp  hpipm_tests.cpp  ipopt_tests.cpp  model_tests.cpp  mpc_test_class.cpp  mpc_test_class.h  mpc_tests.cpp  osqp_tests.cpp  pinocchio_tests.cpp  rigid_body_tests.cpp  sample_planner_tests.cpp  simulation_dispatcher_test_class.h  srb_tests.cpp  test_fn.h  tests.cpp  utils_tests.cpp
tests/adcg_sources/: AutodiffCostInstance_atomic_functions.c  AutodiffCostInstance_forward_zero.c  AutodiffCostInstance_hessian.c  AutodiffCostInstance_info.c  AutodiffCostInstance_jacobian.c  cppad_cg_models.c
tests/constraints/: DynamicsConstraintsTest.cpp  DynamicsConstraintsTest.h
tests/test_data/: achilles.urdf  achilles.xml  achilles_mpc_config.yaml  achilles_mpc_config_sim.yaml  basic_scene.xml  cem_config.yaml  g1_18dof.xml  g1_hand.urdf  g1_hand_v2.urdf  g1_mpc_config.yaml  g1_mpc_config_2.yaml  hopper.urdf  integrator.urdf  mpc_config.yaml  test_a1.urdf  wbc_controller_config.yaml
utils/: CMakeLists.txt  sparse_matrix_builder.cpp  torc_timer.cpp
utils/include/: eigen_utils.h  sparse_matrix_builder.h  torc_timer.h
whole_body_control/: CMakeLists.txt  wbc_controller.cpp
whole_body_control/include/: wbc_controller.h
